maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:57: error: not found: value x
                  x += 1;
                  ^